# SeamAwareDecimater

./: .gitmodules  CMakeLists.txt  collapse_edge_seam.cpp  decimater.cpp
